# binance-trader

./: .gitignore  README.md  keys.py  pyproject.toml
binance_trader/app/: app.py
binance_trader/data/db/account/: order_log.csv
binance_trader/data/db/price/: 2022_22_05_01_22_BTCUSDT_PERPETUAL_1m.csv  2022_22_05_01_22_ETHUSDT_PERPETUAL_1m.csv  2022_22_05_01_22_XRPUSDT_PERPETUAL_1m.csv  2022_23_05_01_23_BTCUSDT_PERPETUAL_1m.csv  2022_23_05_01_23_ETHUSDT_PERPETUAL_1m.csv  2022_23_05_01_23_XRPUSDT_PERPETUAL_1m.csv  2022_24_05_01_24_BTCUSDT_PERPETUAL_1m.csv  2022_24_05_01_24_ETHUSDT_PERPETUAL_1m.csv  2022_24_05_01_24_XRPUSDT_PERPETUAL_1m.csv  2022_29_05_01_29_BTCUSDT_PERPETUAL_1m.csv  2022_29_05_01_29_ETHUSDT_PERPETUAL_1m.csv  2022_29_05_01_29_XRPUSDT_PERPETUAL_1m.csv  2022_30_05_01_30_BTCUSDT_PERPETUAL_1m.csv  2022_30_05_01_30_ETHUSDT_PERPETUAL_1m.csv  2022_30_05_01_30_XRPUSDT_PERPETUAL_1m.csv  2022_31_05_01_31_BTCUSDT_PERPETUAL_1m.csv  2022_31_05_01_31_ETHUSDT_PERPETUAL_1m.csv  2022_31_05_01_31_XRPUSDT_PERPETUAL_1m.csv  2022_32_05_01_32_BTCUSDT_PERPETUAL_1m.csv  2022_32_05_01_32_ETHUSDT_PERPETUAL_1m.csv  2022_32_05_01_32_XRPUSDT_PERPETUAL_1m.csv  2022_33_05_01_33_BTCUSDT_PERPETUAL_1m.csv  (+35 more)
binance_trader/data/modules/: base_stream_url.py  data_processing.py  data_stream.py  data_stream_async.py  data_stream_socket.py
binance_trader/strategy/modules/: base_strategy.py
binance_trader/user/modules/: account_details.py  process_account_details.py
data/modules/: data_processing.py  data_stream.py
tests/: test_binance_trader.py
(+2 files in other folders)
