[tool.poetry]
authors = ["Rishabh Mittal <mittalrishabh181@gmail.com>"]
description = ""
name = "binance-trader"
version = "0.1.0"

[tool.poetry.dependencies]
python = "^3.10"
python-binance = "^1.0.16"

[tool.poetry.dev-dependencies]
pytest = "^7.1.2"
black = "^22.8.0"

[build-system]
build-backend = "poetry.core.masonry.api"
requires = ["poetry-core>=1.0.0"]
